https option included

--- a/README
+++ b/README
@@ -1,8 +1,12 @@
-start notebook:
+# start notebook:
 
 docker run -p 8888:8888 -v ~/BDP@_review/work:/home/jovyan/work jbonato1/BDP2_review
 
-start portainer and jupyter:
+# start portainer and jupyter:
 
 docker-compose up -d
+
+# https:
+ option added 
+ 
 
